--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula 3</title>
+    <link rel="stylesheet" href="style/estilo.css">
 </head>
 <body>
-    <h1>Minha página web</h1>
-    
+    <header>
+        <nav>
+
+        </nav>
+    </header>
+    <main>
+        <h1>Lobo</h1>
+        <img src="img/lobo.jpg" class="imagens">
+        <img src="img/lobo2.jpg" class="imagens">
+        <img src="img/lobo3.jpg" class="imagens">
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti fuga perferendis consequatur voluptatem laudantium eveniet ipsa repellendus saepe recusandae dicta, facere eaque hic in deserunt ab, natus, doloribus dolorem amet!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At sequi quas beatae totam consequuntur deserunt, itaque fuga suscipit, inventore et odit placeat tempore laboriosam vero reiciendis aspernatur eaque facilis incidunt!</p>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
